<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="1dp"
        android:paddingTop="30dp"
        tools:context=".MainActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="40dp"
            android:id="@+id/total_bill_amount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/total_bill_amount"
            android:importantForAutofill="no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/total_bill_amount_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_total_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_total_bill_amount_24px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_bill_amount"
            app:layout_constraintTop_toTopOf="@+id/total_bill_amount"/>

        <TextView
            android:layout_marginStart="50dp"
            android:id="@+id/service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_bill_amount" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_service_question_24px"
            android:id="@+id/icon_service_question"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/service_question"
            app:layout_constraintBottom_toBottomOf="@+id/service_question"
            android:layout_marginStart="4dp"/>

        <RadioGroup
            android:layout_marginStart="40dp"
            android:id="@+id/tip_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_question">
            <RadioButton
                android:id="@+id/twenty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excellent_20"/>
            <RadioButton
                android:id="@+id/fifteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/very_good_15"/>

            <RadioButton
                android:id="@+id/ten_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_10"/>
            <RadioButton
                android:id="@+id/five_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_5"/>
            <RadioButton
                android:id="@+id/zero_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poor_0"/>
        </RadioGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_marginStart="40dp"
            android:id="@+id/round_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/round_off_tip_amount"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tip_options"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_round_up_24px"
            android:id="@+id/icon_round_up"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/round_switch"
            app:layout_constraintBottom_toBottomOf="@+id/round_switch"
            android:layout_marginStart="4dp"/>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="143dp"
            android:layout_marginEnd="143dp"
            android:fontFamily=""
            android:text="@string/calculate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/round_switch" />

        <TextView
            android:id="@+id/tip_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculate_button"
            tools:text="Tip Amount: $10" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>